sdl3/packages/include_C/fertig/SDL_stdinc.h

typedef uint16_t Uint16;
typedef uint32_t Uint32;
typedef int64_t Sint64;
typedef uint64_t Uint64;
extern  void  SDL_free(void *mem);
extern  void * SDL_memset( void *dst, int c, size_t len);
#define SDL_memset  memset
//#define SDL_zerop(x) SDL_memset((x), 0, sizeof(*(x)))
#define SDL_zeroa(x) SDL_memset((x), 0, sizeof((x)))
extern  int  SDL_memcmp(const void *s1, const void *s2, size_t len);
extern  size_t  SDL_wcslen(const wchar_t *wstr);
extern  size_t  SDL_wcsnlen(const wchar_t *wstr, size_t maxlen);
extern  size_t  SDL_wcslcpy( wchar_t *dst, const wchar_t *src, size_t maxlen);
extern  size_t  SDL_wcslcat(wchar_t *dst, const wchar_t *src, size_t maxlen);
extern  wchar_t * SDL_wcsdup(const wchar_t *wstr);
extern  wchar_t * SDL_wcsstr(const wchar_t *haystack, const wchar_t *needle);
extern  wchar_t * SDL_wcsnstr(const wchar_t *haystack, const wchar_t *needle, size_t maxlen);
extern  int  SDL_wcscmp(const wchar_t *str1, const wchar_t *str2);
extern  int  SDL_wcsncmp(const wchar_t *str1, const wchar_t *str2, size_t maxlen);
extern  int  SDL_wcscasecmp(const wchar_t *str1, const wchar_t *str2);
extern  int  SDL_wcsncasecmp(const wchar_t *str1, const wchar_t *str2, size_t len);
extern  long  SDL_wcstol(const wchar_t *str, wchar_t **endp, int base);
extern  size_t  SDL_strlen(const char *str);
extern  size_t  SDL_strnlen(const char *str, size_t maxlen);
extern  size_t  SDL_strlcpy( char *dst, const char *src, size_t maxlen);
extern  size_t  SDL_utf8strlcpy( char *dst, const char *src, size_t dst_bytes);
extern  size_t  SDL_strlcat(char *dst, const char *src, size_t maxlen);
extern   char * SDL_strdup(const char *str);
extern   char * SDL_strndup(const char *str, size_t maxlen);
extern  char * SDL_strrev(char *str);
extern  char * SDL_strupr(char *str);
extern  char * SDL_strlwr(char *str);
extern  char * SDL_strchr(const char *str, int c);
extern  char * SDL_strrchr(const char *str, int c);
extern  char * SDL_strstr(const char *haystack, const char *needle);
extern  char * SDL_strnstr(const char *haystack, const char *needle, size_t maxlen);
extern  char * SDL_strcasestr(const char *haystack, const char *needle);
extern  char * SDL_strtok_r(char *s1, const char *s2, char **saveptr);
extern  size_t  SDL_utf8strlen(const char *str);
extern  size_t  SDL_utf8strnlen(const char *str, size_t bytes);
extern  char * SDL_itoa(int value, char *str, int radix);
extern  char * SDL_uitoa(unsigned int value, char *str, int radix);
extern  char * SDL_ltoa(long value, char *str, int radix);
extern  char * SDL_ultoa(unsigned long value, char *str, int radix);
extern  char * SDL_lltoa(Sint64 value, char *str, int radix);
extern  char * SDL_ulltoa(Uint64 value, char *str, int radix);
extern  int  SDL_atoi(const char *str);
extern  double  SDL_atof(const char *str);
extern  long  SDL_strtol(const char *str, char **endp, int base);
extern  unsigned long  SDL_strtoul(const char *str, char **endp, int base);
extern  Sint64  SDL_strtoll(const char *str, char **endp, int base);
extern  Uint64  SDL_strtoull(const char *str, char **endp, int base);
extern  double  SDL_strtod(const char *str, char **endp);
extern  int  SDL_strcmp(const char *str1, const char *str2);
extern  int  SDL_strncmp(const char *str1, const char *str2, size_t maxlen);
extern  int  SDL_strcasecmp(const char *str1, const char *str2);
extern  int  SDL_strncasecmp(const char *str1, const char *str2, size_t len);
extern  int  SDL_sscanf(const char *text, const char *fmt, ...) ;
extern  int  SDL_vsscanf(const char *text,  const char *fmt, va_list ap) ;
extern  int  SDL_snprintf( char *text, size_t maxlen,  const char *fmt, ... );
extern  int  SDL_swprintf( wchar_t *text, size_t maxlen,  const wchar_t *fmt, ... ) ;
extern  int  SDL_vsnprintf( char *text, size_t maxlen,  const char *fmt, va_list ap) ;
extern  int  SDL_vswprintf( wchar_t *text, size_t maxlen, const wchar_t *fmt, va_list ap);
extern  int  SDL_asprintf(char **strp,  const char *fmt, ...);
extern  int  SDL_vasprintf(char **strp,  const char *fmt, va_list ap) ;
#define SDL_PI_D   3.141592653589793238462643383279502884       /**< pi (double) */
#define SDL_PI_F   3.141592653589793238462643383279502884      /**< pi (float) */
/**
 * Use this function to compute arc cosine of `x`.
 *
 * The definition of `y = acos(x)` is `x = cos(y)`.
 *
 * Domain: `-1 <= x <= 1`
 *
 * Range: `0 <= y <= Pi`
 *
 * \param x floating point value, in radians.
 * \returns arc cosine of `x`.
 *
 * \since This function is available since SDL 3.0.0.
 */
extern  double  SDL_acos(double x);
extern  float  SDL_acosf(float x);
extern  double  SDL_asin(double x);
extern  float  SDL_asinf(float x);
extern  double  SDL_atan(double x);
extern  float  SDL_atanf(float x);
extern  double  SDL_atan2(double y, double x);
extern  float  SDL_atan2f(float y, float x);
extern  double  SDL_ceil(double x);
extern  float  SDL_ceilf(float x);
extern  double  SDL_copysign(double x, double y);
extern  float  SDL_copysignf(float x, float y);
extern  double  SDL_cos(double x);
extern  float  SDL_cosf(float x);
extern  double  SDL_exp(double x);
extern  float  SDL_expf(float x);
extern  double  SDL_fabs(double x);
extern  float  SDL_fabsf(float x);
extern  double  SDL_floor(double x);
extern  float  SDL_floorf(float x);
extern  double  SDL_trunc(double x);
extern  float  SDL_truncf(float x);
extern  double  SDL_fmod(double x, double y);
extern  float  SDL_fmodf(float x, float y);
extern  double  SDL_log(double x);
extern  float  SDL_logf(float x);
extern  double  SDL_log10(double x);
extern  float  SDL_log10f(float x);
extern  double  SDL_modf(double x, double *y);
extern  float  SDL_modff(float x, float *y);
extern  double  SDL_pow(double x, double y);
extern  float  SDL_powf(float x, float y);
extern  double  SDL_round(double x);
extern  float  SDL_roundf(float x);
extern  long  SDL_lround(double x);
extern  long  SDL_lroundf(float x);
extern  double  SDL_scalbn(double x, int n);
extern  float  SDL_scalbnf(float x, int n);
extern  double  SDL_sin(double x);
extern  float  SDL_sinf(float x);
extern  double  SDL_sqrt(double x);
extern  float  SDL_sqrtf(float x);
extern  double  SDL_tan(double x);
extern  float  SDL_tanf(float x);
/* The SDL implementation of iconv() returns these error codes */
#define SDL_ICONV_ERROR     (size_t)-1
#define SDL_ICONV_E2BIG     (size_t)-2
#define SDL_ICONV_EILSEQ    (size_t)-3
#define SDL_ICONV_EINVAL    (size_t)-4
/* SDL_iconv_* are now always real symbols/types, not macros or inlined. */
typedef struct SDL_iconv_data_t *SDL_iconv_t;
extern  SDL_iconv_t  SDL_iconv_open(const char *tocode,
                                                   const char *fromcode);
extern  int  SDL_iconv_close(SDL_iconv_t cd);
extern  size_t  SDL_iconv(SDL_iconv_t cd, const char **inbuf,
                                         size_t * inbytesleft, char **outbuf,
                                         size_t * outbytesleft);
/**
 * This function converts a buffer or string between encodings in one pass,
 * returning a string that must be freed with SDL_free() or NULL on error.
 *
 * \since This function is available since SDL 3.0.0.
 */
extern  char * SDL_iconv_string(const char *tocode,
                                               const char *fromcode,
                                               const char *inbuf,
                                               size_t inbytesleft);
#define SDL_iconv_utf8_locale(S)    SDL_iconv_string("", "UTF-8", S, SDL_strlen(S)+1)
#define SDL_iconv_utf8_ucs2(S)      (Uint16 *)SDL_iconv_string("UCS-2", "UTF-8", S, SDL_strlen(S)+1)
#define SDL_iconv_utf8_ucs4(S)      (Uint32 *)SDL_iconv_string("UCS-4", "UTF-8", S, SDL_strlen(S)+1)
#define SDL_iconv_wchar_utf8(S)     SDL_iconv_string("UTF-8", "WCHAR_T", (char *)S, (SDL_wcslen(S)+1)*sizeof(wchar_t))
#define SDL_free free
#define SDL_memset memset
#define SDL_memcmp memcmp
#define SDL_strlcpy strlcpy
#define SDL_strlcat strlcat
#define SDL_strlen strlen
#define SDL_wcslen wcslen
#define SDL_wcslcpy wcslcpy
#define SDL_wcslcat wcslcat
#define SDL_strdup strdup
#define SDL_wcsdup wcsdup
#define SDL_strchr strchr
#define SDL_strrchr strrchr
#define SDL_strstr strstr
#define SDL_wcsstr wcsstr
#define SDL_strtok_r strtok_r
#define SDL_strcmp strcmp
#define SDL_wcscmp wcscmp
#define SDL_strncmp strncmp
#define SDL_wcsncmp wcsncmp
#define SDL_strcasecmp strcasecmp
#define SDL_strncasecmp strncasecmp
#define SDL_sscanf sscanf
#define SDL_vsscanf vsscanf
#define SDL_snprintf snprintf
#define SDL_vsnprintf vsnprintf