sdl3/packages/pas_includes/sdl3_stdinc.inc


{#define SDL_zerop(x) SDL_memset((x), 0, sizeof(*(x))) }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
//function SDL_zeroa(x : longint) : longint;

(* Const before type ignored *)
(* Const before type ignored *)
function SDL_memcmp(s1:pointer; s2:pointer; len:Tsize_t):longint;cdecl;external;
(* Const before type ignored *)
function SDL_wcslen(wstr:Pwchar_t):Tsize_t;cdecl;external;
(* Const before type ignored *)
function SDL_wcsnlen(wstr:Pwchar_t; maxlen:Tsize_t):Tsize_t;cdecl;external;
(* Const before type ignored *)
function SDL_wcslcpy(dst:Pwchar_t; src:Pwchar_t; maxlen:Tsize_t):Tsize_t;cdecl;external;
(* Const before type ignored *)
function SDL_wcslcat(dst:Pwchar_t; src:Pwchar_t; maxlen:Tsize_t):Tsize_t;cdecl;external;
(* Const before type ignored *)
function SDL_wcsdup(wstr:Pwchar_t):Pwchar_t;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_wcsstr(haystack:Pwchar_t; needle:Pwchar_t):Pwchar_t;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_wcsnstr(haystack:Pwchar_t; needle:Pwchar_t; maxlen:Tsize_t):Pwchar_t;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_wcscmp(str1:Pwchar_t; str2:Pwchar_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_wcsncmp(str1:Pwchar_t; str2:Pwchar_t; maxlen:Tsize_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_wcscasecmp(str1:Pwchar_t; str2:Pwchar_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_wcsncasecmp(str1:Pwchar_t; str2:Pwchar_t; len:Tsize_t):longint;cdecl;external;
(* Const before type ignored *)
function SDL_wcstol(str:Pwchar_t; endp:PPwchar_t; base:longint):longint;cdecl;external;
(* Const before type ignored *)
function SDL_strlen(str:Pchar):Tsize_t;cdecl;external;
(* Const before type ignored *)
function SDL_strnlen(str:Pchar; maxlen:Tsize_t):Tsize_t;cdecl;external;
(* Const before type ignored *)
function SDL_strlcpy(dst:Pchar; src:Pchar; maxlen:Tsize_t):Tsize_t;cdecl;external;
(* Const before type ignored *)
function SDL_utf8strlcpy(dst:Pchar; src:Pchar; dst_bytes:Tsize_t):Tsize_t;cdecl;external;
(* Const before type ignored *)
function SDL_strlcat(dst:Pchar; src:Pchar; maxlen:Tsize_t):Tsize_t;cdecl;external;
(* Const before type ignored *)
function SDL_strdup(str:Pchar):Pchar;cdecl;external;
(* Const before type ignored *)
function SDL_strndup(str:Pchar; maxlen:Tsize_t):Pchar;cdecl;external;
function SDL_strrev(str:Pchar):Pchar;cdecl;external;
function SDL_strupr(str:Pchar):Pchar;cdecl;external;
function SDL_strlwr(str:Pchar):Pchar;cdecl;external;
(* Const before type ignored *)
function SDL_strchr(str:Pchar; c:longint):Pchar;cdecl;external;
(* Const before type ignored *)
function SDL_strrchr(str:Pchar; c:longint):Pchar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_strstr(haystack:Pchar; needle:Pchar):Pchar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_strnstr(haystack:Pchar; needle:Pchar; maxlen:Tsize_t):Pchar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_strcasestr(haystack:Pchar; needle:Pchar):Pchar;cdecl;external;
(* Const before type ignored *)
function SDL_strtok_r(s1:Pchar; s2:Pchar; saveptr:PPchar):Pchar;cdecl;external;
(* Const before type ignored *)
function SDL_utf8strlen(str:Pchar):Tsize_t;cdecl;external;
(* Const before type ignored *)
function SDL_utf8strnlen(str:Pchar; bytes:Tsize_t):Tsize_t;cdecl;external;
function SDL_itoa(value:longint; str:Pchar; radix:longint):Pchar;cdecl;external;
function SDL_uitoa(value:dword; str:Pchar; radix:longint):Pchar;cdecl;external;
function SDL_ltoa(value:longint; str:Pchar; radix:longint):Pchar;cdecl;external;
function SDL_ultoa(value:dword; str:Pchar; radix:longint):Pchar;cdecl;external;
function SDL_lltoa(value:TSint64; str:Pchar; radix:longint):Pchar;cdecl;external;
function SDL_ulltoa(value:TUint64; str:Pchar; radix:longint):Pchar;cdecl;external;
(* Const before type ignored *)
function SDL_atoi(str:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function SDL_atof(str:Pchar):cdouble;cdecl;external;
(* Const before type ignored *)
function SDL_strtol(str:Pchar; endp:PPchar; base:longint):longint;cdecl;external;
(* Const before type ignored *)
function SDL_strtoul(str:Pchar; endp:PPchar; base:longint):dword;cdecl;external;
(* Const before type ignored *)
function SDL_strtoll(str:Pchar; endp:PPchar; base:longint):TSint64;cdecl;external;
(* Const before type ignored *)
function SDL_strtoull(str:Pchar; endp:PPchar; base:longint):TUint64;cdecl;external;
(* Const before type ignored *)
function SDL_strtod(str:Pchar; endp:PPchar):cdouble;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_strcmp(str1:Pchar; str2:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_strncmp(str1:Pchar; str2:Pchar; maxlen:Tsize_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_strcasecmp(str1:Pchar; str2:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_strncasecmp(str1:Pchar; str2:Pchar; len:Tsize_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_sscanf(text:Pchar; fmt:Pchar; args:array of const):longint;cdecl;external;
function SDL_sscanf(text:Pchar; fmt:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_vsscanf(text:Pchar; fmt:Pchar):longint;varargs; cdecl;external;
(* Const before type ignored *)
function SDL_snprintf(text:Pchar; maxlen:Tsize_t; fmt:Pchar; args:array of const):longint;cdecl;external;
function SDL_snprintf(text:Pchar; maxlen:Tsize_t; fmt:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function SDL_swprintf(text:Pwchar_t; maxlen:Tsize_t; fmt:Pwchar_t; args:array of const):longint;cdecl;external;
function SDL_swprintf(text:Pwchar_t; maxlen:Tsize_t; fmt:Pwchar_t):longint;cdecl;external;
(* Const before type ignored *)
function SDL_vsnprintf(text:Pchar; maxlen:Tsize_t; fmt:Pchar):longint;varargs;cdecl;external;
(* Const before type ignored *)
function SDL_vswprintf(text:Pwchar_t; maxlen:Tsize_t; fmt:Pwchar_t):longint;varargs;cdecl;external;
(* Const before type ignored *)
function SDL_asprintf(strp:PPchar; fmt:Pchar; args:array of const):longint;cdecl;external;
function SDL_asprintf(strp:PPchar; fmt:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function SDL_vasprintf(strp:PPchar; fmt:Pchar):longint;varargs;cdecl;external;
{$ifndef SDL_PI_D}
{*< pi (double)  }

const
  SDL_PI_D = 3.141592653589793238462643383279502884;  
{$endif}
{$ifndef SDL_PI_F}
{*< pi (float)  }

const
  SDL_PI_F = 3.141592653589793238462643383279502884;  
{$endif}
{*
 * Use this function to compute arc cosine of `x`.
 *
 * The definition of `y = acos(x)` is `x = cos(y)`.
 *
 * Domain: `-1 <= x <= 1`
 *
 * Range: `0 <= y <= Pi`
 *
 * \param x floating point value, in radians.
 * \returns arc cosine of `x`.
 *
 * \since This function is available since SDL 3.0.0.
  }

function SDL_acos(x:cdouble):cdouble;cdecl;external;
function SDL_acosf(x:single):single;cdecl;external;
function SDL_asin(x:cdouble):cdouble;cdecl;external;
function SDL_asinf(x:single):single;cdecl;external;
function SDL_atan(x:cdouble):cdouble;cdecl;external;
function SDL_atanf(x:single):single;cdecl;external;
function SDL_atan2(y:cdouble; x:cdouble):cdouble;cdecl;external;
function SDL_atan2f(y:single; x:single):single;cdecl;external;
function SDL_ceil(x:cdouble):cdouble;cdecl;external;
function SDL_ceilf(x:single):single;cdecl;external;
function SDL_copysign(x:cdouble; y:cdouble):cdouble;cdecl;external;
function SDL_copysignf(x:single; y:single):single;cdecl;external;
function SDL_cos(x:cdouble):cdouble;cdecl;external;
function SDL_cosf(x:single):single;cdecl;external;
function SDL_exp(x:cdouble):cdouble;cdecl;external;
function SDL_expf(x:single):single;cdecl;external;
function SDL_fabs(x:cdouble):cdouble;cdecl;external;
function SDL_fabsf(x:single):single;cdecl;external;
function SDL_floor(x:cdouble):cdouble;cdecl;external;
function SDL_floorf(x:single):single;cdecl;external;
function SDL_trunc(x:cdouble):cdouble;cdecl;external;
function SDL_truncf(x:single):single;cdecl;external;
function SDL_fmod(x:cdouble; y:cdouble):cdouble;cdecl;external;
function SDL_fmodf(x:single; y:single):single;cdecl;external;
function SDL_log(x:cdouble):cdouble;cdecl;external;
function SDL_logf(x:single):single;cdecl;external;
function SDL_log10(x:cdouble):cdouble;cdecl;external;
function SDL_log10f(x:single):single;cdecl;external;
function SDL_modf(x:cdouble; y:Pdouble):cdouble;cdecl;external;
function SDL_modff(x:single; y:Psingle):single;cdecl;external;
function SDL_pow(x:cdouble; y:cdouble):cdouble;cdecl;external;
function SDL_powf(x:single; y:single):single;cdecl;external;
function SDL_round(x:cdouble):cdouble;cdecl;external;
function SDL_roundf(x:single):single;cdecl;external;
function SDL_lround(x:cdouble):longint;cdecl;external;
function SDL_lroundf(x:single):longint;cdecl;external;
function SDL_scalbn(x:cdouble; n:longint):cdouble;cdecl;external;
function SDL_scalbnf(x:single; n:longint):single;cdecl;external;
function SDL_sin(x:cdouble):cdouble;cdecl;external;
function SDL_sinf(x:single):single;cdecl;external;
function SDL_sqrt(x:cdouble):cdouble;cdecl;external;
function SDL_sqrtf(x:single):single;cdecl;external;
function SDL_tan(x:cdouble):cdouble;cdecl;external;
function SDL_tanf(x:single):single;cdecl;external;
{ The SDL implementation of iconv() returns these error codes  }
{ was #define dname def_expr }
function SDL_ICONV_ERROR : Tsize_t;  

{ was #define dname def_expr }
function SDL_ICONV_E2BIG : Tsize_t;  

{ was #define dname def_expr }
function SDL_ICONV_EILSEQ : Tsize_t;  

{ was #define dname def_expr }
function SDL_ICONV_EINVAL : Tsize_t;  

{ SDL_iconv_* are now always real symbols/types, not macros or inlined.  }
type
  PSDL_iconv_t = ^TSDL_iconv_t;
  TSDL_iconv_t = PSDL_iconv_data_t;
(* Const before type ignored *)
(* Const before type ignored *)

function SDL_iconv_open(tocode:Pchar; fromcode:Pchar):TSDL_iconv_t;cdecl;external;
function SDL_iconv_close(cd:TSDL_iconv_t):longint;cdecl;external;
(* Const before type ignored *)
function SDL_iconv(cd:TSDL_iconv_t; inbuf:PPchar; inbytesleft:Psize_t; outbuf:PPchar; outbytesleft:Psize_t):Tsize_t;cdecl;external;
{*
 * This function converts a buffer or string between encodings in one pass,
 * returning a string that must be freed with SDL_free() or NULL on error.
 *
 * \since This function is available since SDL 3.0.0.
  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_iconv_string(tocode:Pchar; fromcode:Pchar; inbuf:Pchar; inbytesleft:Tsize_t):Pchar;cdecl;external;
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
//function SDL_iconv_utf8_locale(S : longint) : longint;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//function SDL_iconv_utf8_ucs2(S : longint) : PUint16;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//function SDL_iconv_utf8_ucs4(S : longint) : PUint32;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_iconv_wchar_utf8(S : longint) : longint;
